# pypekit

./: Contributing.md  README.md  example.ipynb  iris.ipynb  mkdocs.yml  pipeline_builder.py  pypekit.py  pyproject.toml  test.ipynb  tests.py
.github/workflows/: checks.yml  ci.yml  docs.yml  main.yml  release.yml
docs/api/: pypekit.md
docs/examples/: cross_validation.ipynb  example.ipynb  iris.ipynb
docs/tutorials/: getting-started.ipynb
examples/: cross_validation.ipynb  example.ipynb  iris.ipynb
src/pypekit/: core.py  utils.py
tests/: test_core.py
