[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pypekit"
version = "0.1.2"
authors = [
  { name = "Tim Berti", email = "tim.fabian.berti@gmail.com" }
]
description = "Lightweight Python package for data pipelines"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypekit/pypekit"
Issues   = "https://github.com/pypekit/pypekit/issues"

[project.optional-dependencies]
dev = [
  "hatch>=1.10",
  "black>=24.3",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=4.1",
  "isort>=5.0"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
  "mkdocs-autorefs>=1.0",
  "mkdocs-jupyter>=0.24"
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
mypy_path = ["src"]
strict = true
show_error_codes = true
ignore_missing_imports = true

[tool.hatch.envs.docs]
dependencies = ["pypekit[dev,docs]"]
scripts = { build = "mkdocs build", serve = "mkdocs serve -a localhost:8000" }

[tool.hatch.envs.default.scripts]
fmt       = "isort src tests && black src tests"
fmt-check = "isort --check-only src tests && black --check src tests"
types     = "mypy src"
test      = "pytest"
docs      = "hatch run docs:mkdocs build --strict"
check     = [
  "fmt-check",
  "types",
  "test",
  "docs"
]
